# nci-engine

./: .gitignore  AWS_DEPLOYMENT_GUIDE.md  COMPREHENSIVE_QA.md  DOCKER_DEPLOYMENT_GUIDE.md  PRESENTATION_SCRIPT_5MIN.md  QUICK_START.md  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
.github/: copilot-instructions.md
alembic/: env.py
alembic/versions/: 08b1bbda5d82_add_analysis_history_and_evaluation_.py
docs/: OPTIMIZATION_CHANGELOG.md  OPTIMIZATION_IMPLEMENTATION.md  PERFORMANCE_OPTIMIZATION.md  PHASE_4_LATENCY_OPTIMIZATION.md  POSTGRESQL_MIGRATION.md  QUERY_FLOW.md  RETRIEVAL_EVALUATION_FINDINGS.md  frontend-setup-complete.md  iteration-guide.md  option-c-and-next-steps.md  prompt-improvements.md  reranking-strategy.md  retrieval-improvement-strategy.md
experiments/: add_chunk_strategy_column.py  compare_retrieval.py  run_golden_eval.py
frontend/: package.json
frontend/app/: layout.tsx  page.tsx
frontend/components/: QueryInput.tsx
frontend/public/: test-api.html
scripts/: eval_retrieval_only.py  fresh_ingest_from_csv.py  generate_contextual_embeddings.py  generate_full_chunks.py  optimize_weights.py  regenerate_embeddings.py  run_evaluation.py  seed_cache_stats.py  update_baseline_metrics.py  update_gold_dataset.py
src/: config.py  feedback.py  logging_config.py  security.py
src/api/: __init__.py  app.py  main.py  repository.py  schemas.py
src/cli/: iterate.py
src/crawler/: cleaner.py  crawler.py
src/database/: cache.py  db_pg.py  hybrid_search.py  models.py  vector_store_pg.py
tests/: __init__.py  conftest.py
(+28 files in other folders)
