[project]
name = "nci-engine"
version = "0.1.0"
description = "No-Code Intelligence Engine: AI-Powered Decision Support System"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "playwright>=1.40.0",
    "psycopg[binary]>=3.1.0",
    "pgvector>=0.2.0",
    "sentence-transformers>=2.2.2",
    "FlagEmbedding>=1.2.5",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "openai>=1.10.0",
    "pydantic>=2.6.0",
    "loguru>=0.7.2",
    "plotly>=5.18.0",
    "pandas>=2.2.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.26.0",
    "aiohttp>=3.13.2",
    "redis>=7.0.0",
    "rich>=13.7.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.2.0",
    "black>=24.1.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=src --cov-report=term-missing --cov-report=html"
testpaths = [
    "tests",
]

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "src/__init__.py",
    "*/tests/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
fail_under = 80
show_missing = true
